--- a/templates/contract/index.html.twig
+++ b/templates/contract/index.html.twig
@@ -1,20 +1,28 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ContractController!{% endblock %}
+{% block title %}Liste de contract de Sponsor{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <div class="header">
+        <h1> Liste des contrats </h1>
+        <a class="btn btn-primary" href="addContract" role="button"> + </a>
+    </div>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'D:/Logiciels/XAMPP/htdocs/SideSponsor/src/Controller/ContractController.php'|file_link(0) }}">src/Controller/ContractController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'D:/Logiciels/XAMPP/htdocs/SideSponsor/templates/contract/index.html.twig'|file_link(0) }}">templates/contract/index.html.twig</a></code></li>
-    </ul>
-</div>
+    <div class="container">
+        {% if contract_list is defined %}
+            <ul class="list-group list-group-flush">
+                {% for contract in contract_list %}
+                    <li>
+                        {{ contract }}
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            Aucun contract a été effectué pour le moment...
+        {% endif %}
+
+    </div>
+
+
 {% endblock %}
