--- a/templates/contract/index.html.twig
+++ b/templates/contract/index.html.twig
@@ -6,7 +6,7 @@
 
     <div class="header">
         <h1> Liste des contrats </h1>
-        <a class="btn btn-primary" href="addContract" role="button"> + </a>
+        <a class="btn btn-primary" href="contract/add" role="button"> + </a>
     </div>
 
     <div class="container">
