feat: fixtures and faker for DB

--- a/templates/contract/add.html.twig
+++ b/templates/contract/add.html.twig
@@ -8,6 +8,10 @@
         {{ form(form) }}
     </div>
 
+    <div class="alert alert-success">
+        Le contrat intitulé {{ contract.name }} a été ajouté à la BD !
+    </div>
+
 
     <div class="contract_form">
         <form method="POST" action="/contract">
