--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,7 @@
     </head>
     <body>
         {% include '/base/header.twig' %}
+        {% include '/base/alert.twig' %}
         {% block body %}{% endblock %}
         {% include '/base/footer.twig' %}
     </body>
