--- a/templates/contract/detail.html.twig
+++ b/templates/contract/detail.html.twig
@@ -5,21 +5,21 @@
 {% block body %}
 
     <div>
-        <button type="button" class="btn btn-primary">< Retour</button>
+        <a type="button" href="/contract" class="btn btn-primary"><i class="fa-solid fa-caret-left"></i> Retour</a>
     </div>
 
     <div>
         <h1> Contrat N°{{ contract.id }}</h1>
         <p>Nom : {{ contract.name }}</p>
         <p>Nom du mécène : {{ contract.mecenename }}</p>
-        <p>Date de début : {{ contract.begindate }}</p>
-        <p>Date de fin : {{ contract.enddate }}</p>
+        <p>Date de début : {{ contract.begindate|date('d-m-Y') }}</p>
+        <p>Date de fin : {{ contract.enddate|date('d-m-Y') }}</p>
     </div>
 
     <div>
-        <button type="button" class="btn btn-danger">Supprimer</button>
+        <a type="button"  href="/contract/delete/{{ contract.id }}" class="btn btn-danger"><i class="fa-solid fa-trash"></i> Supprimer</a>
 
-        <button type="button" class="btn btn-info">Info</button>
+        <a type="button" href="/contract/pdf/{{ contract.id }}" class="btn btn-info"><i class="fa-solid fa-file-pdf"></i> Exporter en PDF</a>
     </div>
 
 {% endblock %}
