--- a/templates/contract/index.html.twig
+++ b/templates/contract/index.html.twig
@@ -22,7 +22,7 @@
                             <p class="card-text"> Date de fin :  {{ contract.enddate|date('d-m-Y') }} </p>
                         </div>
                         <div class="contract-button">
-                            <a href="{{ path('contract.info', {id: contract.id }) }}" class="card-link"><i class="fa-regular fa-eye"></i></a>
+                            <a href="{{ path('contract.info', {id: contract.id }) }}" class="card-link"><i class="fa-regular fa-eye" style="color:darkblue"></i></a>
                         </div>
                     </div>
                 </div>
