--- a/templates/contract/add.html.twig
+++ b/templates/contract/add.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <div>
+    <div class="previous-button">
         <a type="button" href="/contract" class="btn btn-primary"><i class="fa-solid fa-caret-left"></i> Retour</a>
     </div>
 
@@ -15,12 +15,12 @@
 
         {{ form_row(form.mecene_name) }}
 
-        <div>
+        <div class="date-label">
             <i class="fa fa-calendar"></i> {{ form_label(form.begin_date) }}
         </div>
         {{ form_widget(form.begin_date) }}
 
-        <div>
+        <div class="date-label">
             <i class="fa fa-calendar"></i> {{ form_label(form.end_date) }}
         </div>
         {{ form_widget(form.end_date) }}
@@ -28,7 +28,10 @@
         <div class="form-error">
                 {{ form_errors(form) }}
         </div>
-        {{ form_end(form) }}
+
+        <div class="submit-form">
+            {{ form_end(form) }}
+        </div>
     </div>
 
 {% endblock %}
